add function lancedés

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p id="play1"></p>
         </div>
         <div class="dice">
-            <p>&#9856</p>
+            <p id="facedice">&#9856</p>
         </div>
         <div class="player2">
             <h1>PLAYER 2</h1>
